--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>TechCon 2024 - Homepage</title>
+</head>
+<body>
+
+    <header>
+        <h1>TechCon 2024</h1>
+        <nav>
+            <ul>
+                <li><a href="about.html">About</a></li>
+                <li><a href="schedule.html">Schedule</a></li>
+                <li><a href="register.html">Register</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+            <h2>Welcome to TechCon 2024</h2>
+            <p>Join leading innovators and tech enthusiasts from around the world for a multi-day experience of cutting-edge talks, workshops, and networking at TechCon 2024.</p>
+            
+            <video controls width="640">
+                <source src="promo.mp4" type="video/mp4">
+                <track src="promo_captions.vtt" kind="subtitles" srclang="en" label="English">
+                Your browser does not support the video tag.
+            </video>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 TechCon. All rights reserved. Copyright TechCon.</p>
+    </footer>
+
+</body>
+</html>
 
