--- a/techcon_website/techcon_website/about.html
+++ b/techcon_website/techcon_website/about.html
@@ -1,1 +1,47 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>About TechCon 2024</title>
+</head>
+<body>
+    <header>
+        <h1>About TechCon 2024</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="schedule.html">Schedule</a></li>
+                <li><a href="register.html">Register</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <article>
+            <h2>History</h2>
+            <p>TechCon began in 2010 as a small gathering of tech enthusiasts. Over the years, it has grown into one of the leading tech conferences worldwide.</p>
+            <img src="history.jpg" alt="A photo from the first TechCon conference">
+        </article>
+
+        <article>
+            <h2>Mission</h2>
+            <p>Our mission is to bring together innovators, developers, and industry leaders to shape the future of technology through collaboration and learning.</p>
+            <img src="mission.jpg" alt="People collaborating at TechCon">
+        </article>
+
+        <article>
+            <h2>Past Speakers</h2>
+            <p><strong>Jane Doe</strong> – AI expert and founder of FutureTech Labs.</p>
+            <img src="jane.jpg" alt="Jane Doe speaking at TechCon 2022">
+            <p><strong>John Smith</strong> – Cybersecurity innovator and author.</p>
+            <img src="john.jpg" alt="John Smith delivering a keynote at TechCon">
+        </article>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 TechCon Conference</p>
+    </footer>
+</body>
+</html>
 
