--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -1,1 +1,67 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Schedule for TechCon 2024</title>
+</head>
+<body>
+
+  <header>
+    <h1>Schedule for TechCon 2024</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="register.html">Register</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <table>
+      <caption>Detailed Schedule of Events for TechCon 2024</caption>
+      <thead>
+        <tr>
+          <th scope="col">Time</th>
+          <th scope="col">Session</th>
+          <th scope="col">Speaker</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>09:00 - 10:00 AM</td>
+          <td>Opening Keynote</td>
+          <td>Jane Doe</td>
+        </tr>
+        <tr>
+          <td>10:15 - 11:15 AM</td>
+          <td>Future of AI</td>
+          <td>John Smith</td>
+        </tr>
+        <tr>
+          <td>11:30 - 12:30 PM</td>
+          <td>Cybersecurity in 2024</td>
+          <td>Mary Johnson</td>
+        </tr>
+        <tr>
+          <td>01:30 - 03:00 PM</td>
+          <td>Panel Discussion: Women in Tech</td>
+          <td>Various Speakers</td>
+        </tr>
+        <tr>
+          <td>03:15 - 04:00 PM</td>
+          <td>Networking Session</td>
+          <td>-</td>
+        </tr>
+      </tbody>
+    </table>
+  </main>
+
+  <footer>
+    <p>&copy; 2024 TechCon Conference</p>
+  </footer>
+
+</body>
+</html>
 
