--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -59,7 +59,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2024 TechCon Conference</p>
+    <p>&copy; 2024 TechCon. All rights reserved. Copyright TechCon.</p>
   </footer>
 
 </body>
