--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Register for TechCon 2024</title>
+</head>
+<body>
+
+  <header>
+    <h1>Register for TechCon 2024</h1>
+    <nav>
+      <a href="index.html">Home</a> |
+      <a href="about.html">About</a> |
+      <a href="schedule.html">Schedule</a> |
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+
+  <main>
+    <form>
+      <label for="name">Full Name:</label><br>
+      <input type="text" id="name" name="name" required><br><br>
+
+      <label for="email">Email Address:</label><br>
+      <input type="email" id="email" name="email" required><br><br>
+
+      <label for="password">Password:</label><br>
+      <input type="password" id="password" name="password" required><br><br>
+
+      <label for="confirm-password">Confirm Password:</label><br>
+      <input type="password" id="confirm-password" name="confirm-password" required><br><br>
+
+      <input type="checkbox" id="terms" name="terms" required>
+      <label for="terms">I agree to the Terms and Conditions</label><br><br>
+
+      <button type="submit">Register Now</button>
+    </form>
+  </main>
+
+  <footer>
+    <p>&copy; 2024 TechCon Conference. All rights reserved.</p>
+  </footer>
+
+</body>
+</html>
 
