--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>TechCon 2024 - Homepage</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
