--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>TechCon 2024 - Homepage</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
